--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
+    "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@mui/x-date-pickers": "^8.18.0",
     "axios": "^1.13.2",
@@ -22,6 +23,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
+    "react-router-dom": "^7.9.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
