--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@mui/x-date-pickers": "^8.18.0",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "mui-core": "^3.0.3",
+    "mui-icons": "^1.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
